Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-4923

warmup crash from 1.8.1

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0-beta
    • 1.8.1
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      There is a sporadic unit test failure, which is caused by vbucket snapshot task scheduled after warmup:

      Thread 1 Crashed:
      0 ep.0.so 0x00000001005effc6 sqlite3VdbeMemGrow + 262 (sqlite3.c:17683)
      1 ep.0.so 0x0000000100666530 sqlite3VdbeExec + 22592 (sqlite3.c:61945)
      2 ep.0.so 0x000000010066de66 sqlite3_step + 1734 (sqlite3.c:57947)
      3 ep.0.so 0x00000001005a470a PreparedStatement::execute() + 42 (sqlite-pst.cc:73)
      4 ep.0.so 0x00000001005a231d bool StrategicSqlite3::storeMap<std::pair<unsigned short, unsigned short>, vbucket_state>(PreparedStatement*, PreparedStatement*, std::map<std::pair<unsigned short, unsigned short>, vbucket_state, std::less<std::pair<unsigned short, unsigned short> >, std::allocator<std::pair<std::pair<unsigned short, unsigned short> const, vbucket_state> > > const&) + 173 (sqlite-kvstore.cc:231)
      5 ep.0.so 0x000000010059ed2e StrategicSqlite3::snapshotVBuckets(std::map<std::pair<unsigned short, unsigned short>, vbucket_state, std::less<std::pair<unsigned short, unsigned short> >, std::allocator<std::pair<std::pair<unsigned short, unsigned short> const, vbucket_state> > > const&) + 30 (sqlite-kvstore.cc:201)
      6 ep.0.so 0x000000010051f9bc EventuallyPersistentStore::snapshotVBuckets(Priority const&) + 236 (ep.cc:1012)
      7 ep.0.so 0x0000000100532151 SnapshotVBucketsCallback::callback(Dispatcher&, std::tr1::shared_ptr<Task>) + 17 (ep.cc:226)
      8 ep.0.so 0x000000010051b5a1 Task::run(Dispatcher&, std::tr1::shared_ptr<Task>) + 65 (dispatcher.hh:139)
      9 ep.0.so 0x000000010051a430 Dispatcher::run() + 944 (dispatcher.cc:123)
      10 ep.0.so 0x000000010051ac4c launch_dispatcher_thread + 28 (dispatcher.cc:39)
      11 libSystem.B.dylib 0x00007fff8a4fafd6 _pthread_start + 331
      12 libSystem.B.dylib 0x00007fff8a4fae89 thread_start + 13

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chiyoung Chiyoung Seo (Inactive)
            chiyoung Chiyoung Seo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty