MB-4923 Schedule DB snapshot and cleanup tasks after the warmup.

If we don't wait until the full warmup is done, there is a
sporadic crash in non-WAL mode that can only have one database
connection and one dispatcher thread. This change schedules
vbucket snapshot, stats snapshot, and other DB cleanup tasks
right after the full warmup is completed. It is totally safe to
delay them because enabling traffics does not depend on those
tasks.

Change-Id: I2739eadfbd8bac846d7e08a2849b06cfe081b5f2
Reviewed-on: http://review.couchbase.org/14144
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>
Tested-by: Chiyoung Seo <chiyoung.seo@gmail.com>